# CHAP_Grpc

./: .gitignore  Makefile  README  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
.github/workflows/: ci.yml  cicd.yml  deploy-env-ssm.yml
aiserver/: .gitignore  Cargo.toml
aiserver/src/: connect.rs  lang_lambda.rs  lib.rs  main.rs  reduce_dimensions.py  tokenizer.rs  wordtovec.rs
backend/: .air.toml  .env  .env.test  .golangci.yml  Dockerfile  go.mod  go.sum  main.go
backend/api-test/: endpoint.http  test-api.sh
backend/api/handler/: auth.go  register.go  thread.go  user.go
backend/api/pd/: auth.pb.go  auth.pb.gw.go  auth_grpc.pb.go  comment.pb.go  comment.pb.gw.go  comment_grpc.pb.go  common.pb.go  event.pb.go  event.pb.gw.go  event_grpc.pb.go  image.pb.go  image.pb.gw.go  image_grpc.pb.go  post.pb.go  post.pb.gw.go  post_grpc.pb.go  spot.pb.go  spot.pb.gw.go  spot_grpc.pb.go  thread.pb.go  thread.pb.gw.go  thread_grpc.pb.go  user.pb.go  user.pb.gw.go  user_grpc.pb.go
backend/api/proto/: auth.proto  comment.proto  common.proto  event.proto  image.proto  post.proto  spot.proto  thread.proto  user.proto
backend/api/server/: main.go
backend/handler/: auth.go  comment.go  event.go  image.go  post.go  register.go  spot.go  thread.go  user.go
backend/infra/db/: db.go
backend/infra/model/: auth.go  comment.go  comment_like.go  event.go  event_join.go  event_like.go  post.go  post_like.go  spot.go  thread.go  thread_like.go  user.go  user_follower.go  user_following.go
backend/infra/repository/: auth.go  comment.go  event.go  post.go  spot.go  thread.go  user.go
backend/middleware/: auth.go  gateway.go
backend/server/: main.go
backend/utils/: jwt.go
docs/: Dockerfile.swagger  auth.swagger.json  comment.swagger.json  event.swagger.json  image.swagger.json  post.swagger.json  spot.swagger.json  swagger-initializer.js  swagger.json  thread.swagger.json  user.swagger.json
envoy/: Dockerfile  envoy.yaml
frontend/: .gitignore  orval.config.ts  package.json  tailwind.config.js  tsconfig.json
frontend/script/: orval.js
frontend/src/api/: auth.ts  axios.ts  comment.ts  event.ts  image.ts  post.ts  spot.ts  thread.ts  (+1 more)
frontend/styles/: globals.css
lambda/: Cargo.toml  Dockerfile  README.md  build.sh
lambda/src/: main.rs  test_sample.rs
scripts/: lang_process_local.py
social_sensor/: .env  .gitignore  4  Cargo.toml  README_GENERATE_DTOS.md
social_sensor/src/: lib.rs  main.rs  social_sensor_invoke.rs
social_sensor/src/domain/: mod.rs  validate.rs
social_sensor/src/domain/composite/: coordinate.rs
social_sensor/src/domain/domain_service/: clustering.rs  get_trend.rs  heatmap.rs  mod.rs  tokenizer.rs  word2vec.rs
social_sensor/src/domain/entity/: event.rs  mod.rs  post.rs  thread.rs
social_sensor/src/domain/value_object/: coordinate.rs  lat.rs  lng.rs  mod.rs  title.rs  uuid_v0.rs
social_sensor/src/infra/: db.rs  mod.rs  schema_generator.rs
social_sensor/src/infra/dto/: event.rs  post.rs  thread.rs
social_sensor/src/infra/model/: auth_db_models.rs  comment_db_models.rs  event_db_models.rs  event_like_db_models.rs  events.rs  mod.rs  post_db_models.rs  post_like_db_models.rs  posts.rs  prelude.rs  spot_db_models.rs  thread_db_models.rs  thread_like_db_models.rs  threads.rs  user_db_models.rs
social_sensor/src/infra/repository/: event_repository.rs  gemini.rs  mod.rs  post_repository.rs  thread_repository.rs
social_sensor/src/presentation/dto/: coordinate.rs
social_sensor/src/presentation/handler/: handler.rs
social_sensor/src/test/: lang_analyzer_integration.rs  mod.rs
social_sensor/src/usecase/: called_ai.rs  clustering_usecase.rs  clustering_usecase_test.rs  lang_analyzer.rs  mod.rs
terraform/: .terraform.lock.hcl  Iam.tf  apigateway.tf  cert.tf  ec2.tf  lambda.tf  provider.tf  rds.tf  terraform.tfstate  terraform.tfstate.backup  tfplan  tfplan2  tfplan3  variable.tf  vpc.tf
(+108 files in other folders)
