[package]
name = "aiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
tokenizers = "0.22.1"
vibrato = "0.5"
zstd = "0.13"
finalfusion = "0.17"
ndarray = "0.15"
# Fast clustering (KMeans)
linfa = "0.7.1"
linfa-clustering = "0.7.1"

# Dependencies used by lang_lambda binary
lambda_http = "0.8"
lambda_runtime = "0.7"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
regex = "1"
once_cell = "1.20"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
postgres = "0.19.12"

[[bin]]
name = "lang_lambda"
path = "src/lang_lambda.rs"
