[package]
name = "chap_image_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.8", features = ["tokio-runtime"] }
lambda_runtime = "0.7"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = "0.24"

bytes = "1.4"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = "symbols"
