[package]
name = "chap_image_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8"
lambda_runtime = "0.7"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = "0.24"
fast_image_resize = "2.0" # 高速画像リサイズ用

bytes = "1.4"
anyhow = "1.0"
url = "2.4"
base64 = "0.21"
rayon = "1.11.0"
once_cell = "1.21.3"
mozjpeg = "0.10.13"



[profile.release]
opt-level = 3
lto = true
debug = false
strip = "symbols"
